# paper-todo-tui

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/assets/: demo.tape
paper_todo/: __init__.py  animation.py  app.py  dice.py  models.py  paper_todo.tcss  storage.py  theme.py
paper_todo/widgets/: __init__.py  duration_indicator.py  progress_bar.py  task_indicator.py  task_row.py
tests/: test_app_helpers.py  test_app_ui.py  test_dice.py  test_models.py  test_storage.py
