[project]
name = "paper-todo-tui"
version = "0.1.0"
description = "Dice-based TODO TUI inspired by Paper Apps"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "pydantic>=2.0.0",
]

[project.scripts]
paper-todo = "paper_todo.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper_todo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["paper_todo"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.25.2",
    "pytest-textual-snapshot>=1.0.0",
]
